--- a/package.json
+++ b/package.json
@@ -69,5 +69,10 @@
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.2.3",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1"
+  }
 }
